Prevent modal dialog content from overflowing the box.
BUG=None
TEST=Execute the following code in context of File Manager: fileManager.alert.showWithTitle(longText, longText, function() {}, function() {}, function() {})

Review URL: https://chromiumcodereview.appspot.com/9406009

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@122278 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 3b05159e2a27cb786c2dfb2774f053d9bea77534

--- a/chrome/browser/resources/shared/css/dialogs.css
+++ b/chrome/browser/resources/shared/css/dialogs.css
@@ -46,11 +46,13 @@
 .cr-dialog-title {
   font-weight: bold;
   font-size: 120%;
-  padding-bottom: 10px;
 }
 
-.cr-dialog-text {
+.cr-dialog-text,
+.cr-dialog-title {
   padding-bottom: 10px;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .cr-dialog-frame input {
